Splitting data correctly

--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Simple Recorder.js demo with record, stop and pause - addpipe.com</title>
+    <title>Masters</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Latest compiled and minified Bootstrap CSS -->
@@ -10,8 +10,40 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>Simple Recorder.js demo</h1>
-    <p><small>Made by the <a href="https://addpipe.com" target="_blank">Pipe Video Recording Plat1</a></small></p>
+    <h1>Writing Recognition Program</h1>
+    </br>
+    <input type="text" id="phone" name="phone"><br><br>
+    <div class="custom-select" style="width:200px;">
+    <select name="letters" id="letters">
+      <option value="0">Select letter:</option>
+      <option value="A">A</option>
+      <option value="B">B</option>
+      <option value="C">C</option>
+      <option value="D">D</option>
+      <option value="E">E</option>
+      <option value="F">F</option>
+      <option value="G">G</option>
+      <option value="H">H</option>
+      <option value="I">I</option>
+      <option value="J">J</option>
+      <option value="K">K</option>
+      <option value="L">L</option>
+      <option value="M">M</option>
+      <option value="N">N</option>
+      <option value="O">O</option>
+      <option value="P">P</option>
+      <option value="Q">Q</option>
+      <option value="R">R</option>
+      <option value="S">S</option>
+      <option value="T">T</option>
+      <option value="U">U</option>
+      <option value="V">V</option>
+      <option value="W">W</option>
+      <option value="X">X</option>
+      <option value="Y">Y</option>
+      <option value="Z">Z</option>
+    </select>
+   </div>
     <div id="controls">
   	 <button id="recordButton">Record</button>
   	 <button id="pauseButton" disabled>Pause</button>
